--- a/.github/workflows/generate-model.yaml
+++ b/.github/workflows/generate-model.yaml
@@ -6,7 +6,6 @@ on:
 
 env:
   SCHEMAS: "RC-EDA"
-  SCHEMA_VERSION: "1.3"
 
 jobs:
   generate-model:
@@ -31,14 +30,14 @@ jobs:
           pip install -r ./requirements.txt
           IFS=' ' read -ra SCHEMAS_ARRAY <<< "$SCHEMAS"
           for SCHEMA in "${SCHEMAS_ARRAY[@]}"; do
-            python3 ./csv_parser.py -s $SCHEMA -v $SCHEMA_VERSION
+            python3 ./csv_parser.py -s $SCHEMA
             mv ./out/$SCHEMA/$SCHEMA.openapi.yaml ../generator/input/$SCHEMA.openapi.yaml
           done
 
       - name: Set up JDK 11
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v4
         with:
-          java-version: 11
+          java-version: '11'
           distribution: 'temurin'
 
       - name: Setup node env 🏗
@@ -68,43 +67,7 @@ jobs:
         run: |
           rsync -r --ignore-existing ./classes/src/main/java/com/hubsante/model/* ../src/main/java/com/hubsante/model/
 
-      - name: get current date
-        id: date
-        uses: Kaven-Universe/github-action-current-date-time@v1
+      - name: commit and push changes
+        uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          format: 'YYYY-MM-DD'
-
-      - name: create current date branch
-        run: |
-          git checkout -b "${{ steps.date.outputs.time }}-generated"
-          git diff -- ../src/main/java/com/hubsante/model/ > changes.patch
-          git apply changes.patch
-          git add -A
-          git status
-
-      # about below: the strategy is still unclear to me
-      # I think we should commit models/csv_parser/out (json schemas, openapi specs) and models/generator/classes (java classes)
-      # we should also commit the full asyncapi spec (not concatenated at this point)
-
-      # but should we commit these files on the same branch as the one we are working on or on a dedicated one ?
-      # if it's on a dedicated one, we should add some steps:
-      # - override the classes in src/main/java
-      # - run gradlew build at least, or gradlew test
-      # - if changes, tests must fail because we didn't update the test examples
-      # - if new tab, there won't be any test
-
-      # or do we just want to compare the spec files on a weekly basis ?
-
-#      - name: Commit files ✅
-#        run: |
-#          git config --local user.email "Model-Generator[bot]@users.noreply.github.com"
-#          git config --local user.name "Model-Generator[bot]"
-#          git add classes
-#          git add ../csv_parser/out
-#          # Commit only if needed | Ref.: https://stackoverflow.com/a/8123841/10115198
-#          git diff-index --quiet HEAD || git commit -m "⚙️ Auto-génération des classes"
-#
-#      - name: Push changes ⬆️
-#        uses: ad-m/github-push-action@master
-#        with:
-#          branch: ${{ github.head_ref }}
+          commit_message: ⚙️ Auto-génération des classes et des specs
