--- a/.github/workflows/generate-model.yaml
+++ b/.github/workflows/generate-model.yaml
@@ -35,40 +35,40 @@ jobs:
             cat ./out/full-asyncapi.yaml
           done
 
-#      - name: Set up JDK 11
-#        uses: actions/setup-java@v4
-#        with:
-#          java-version: '11'
-#          distribution: 'temurin'
-#
-#      - name: Setup node env 🏗
-#        uses: actions/setup-node@v3
-#        with:
-#          node-version: 16
-#
-#      - name: install openapi-generator-cli
-#        run: npm install -g @openapitools/openapi-generator-cli
-#
-#      - name: install linter
-#        run: apt install -y clang-format
-#
-#      - name: Generate Java classes
-#        run: |
-#          npx @openapitools/openapi-generator-cli generate -c ./config/common/common.generator-config.json --skip-validate-spec
-#          npx @openapitools/openapi-generator-cli generate -c ./config/common/common.wrapper.generator-config.json --skip-validate-spec
-#          npx @openapitools/openapi-generator-cli generate -c ./config/common/common.distributionElement.generator-config.json --skip-validate-spec
-#
-#          IFS=' ' read -ra SCHEMAS_ARRAY <<< "$SCHEMAS"
-#          for SCHEMA in "${SCHEMAS_ARRAY[@]}"; do
-#            npx @openapitools/openapi-generator-cli generate -c ./config/$SCHEMA/$SCHEMA.generator-config.json --skip-validate-spec
-#            npx @openapitools/openapi-generator-cli generate -c ./config/$SCHEMA/$SCHEMA.wrapper.generator-config.json --skip-validate-spec
-#          done
-#
-#      - name: copy generated classes
-#        run: |
-#          rsync -r --ignore-existing ./classes/src/main/java/com/hubsante/model/* ../src/main/java/com/hubsante/model/
-#
-#      - name: commit and push changes
-#        uses: stefanzweifel/git-auto-commit-action@v5
-#        with:
-#          commit_message: ⚙️ Auto-génération des classes et des specs
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+
+      - name: Setup node env 🏗
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      - name: install openapi-generator-cli
+        run: npm install -g @openapitools/openapi-generator-cli
+
+      - name: install linter
+        run: apt install -y clang-format
+
+      - name: Generate Java classes
+        run: |
+          npx @openapitools/openapi-generator-cli generate -c ./config/common/common.generator-config.json --skip-validate-spec
+          npx @openapitools/openapi-generator-cli generate -c ./config/common/common.wrapper.generator-config.json --skip-validate-spec
+          npx @openapitools/openapi-generator-cli generate -c ./config/common/common.distributionElement.generator-config.json --skip-validate-spec
+
+          IFS=' ' read -ra SCHEMAS_ARRAY <<< "$SCHEMAS"
+          for SCHEMA in "${SCHEMAS_ARRAY[@]}"; do
+            npx @openapitools/openapi-generator-cli generate -c ./config/$SCHEMA/$SCHEMA.generator-config.json --skip-validate-spec
+            npx @openapitools/openapi-generator-cli generate -c ./config/$SCHEMA/$SCHEMA.wrapper.generator-config.json --skip-validate-spec
+          done
+
+      - name: copy generated classes
+        run: |
+          rsync -r --ignore-existing ./classes/src/main/java/com/hubsante/model/* ../src/main/java/com/hubsante/model/
+
+      - name: commit and push changes
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: ⚙️ Auto-génération des classes et des specs
