fix lib models package source

--- a/hub/dispatcher/build.gradle
+++ b/hub/dispatcher/build.gradle
@@ -47,7 +47,7 @@ repositories {
 //    mavenLocal()
     mavenCentral()
     maven {
-        url = uri("https://maven.pkg.github.com/ansforge/SAMU-Hub-Sante")
+        url = uri("https://maven.pkg.github.com/ansforge/SAMU-Hub-Modeles")
         credentials {
             username = System.getenv('GITHUB_ACTOR')
             password = System.getenv('GITHUB_TOKEN')
@@ -60,7 +60,7 @@ ext {
 }
 
 dependencies {
-    implementation 'com.hubsante:models:0.2.6-SNAPSHOT'
+    implementation 'com.hubsante:models-2:0.2.6'
 
     implementation 'org.codehaus.groovy:groovy-json:3.0.9'
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
