--- a/hub/dispatcher/build.gradle
+++ b/hub/dispatcher/build.gradle
@@ -60,7 +60,7 @@ ext {
 }
 
 dependencies {
-    implementation 'com.hubsante:models-2:0.3.1-SNAPSHOT'
+    implementation 'com.hubsante:models-2:0.3.1'
 
     implementation 'org.codehaus.groovy:groovy-json:3.0.9'
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
