- add latest rabbitMQ rootCA fro preprod environment - use 'localhost' as default rabbitmq url - add secret for RabbitMQ url

--- a/hub/infra/web/lrm.yaml
+++ b/hub/infra/web/lrm.yaml
@@ -35,3 +35,19 @@ spec:
           image: romainfd/hub-lrm:latest
           ports:
             - containerPort: 80
+          env:
+            - name: HUB_URL
+              valueFrom:
+                secretKeyRef:
+                  name: rabbitmq-url-secret
+                  key: url
+---
+# I added temporarily this secret to be iso between sandbox and preprod.
+# It will be migrated to the Config Repo when migrating sandbox
+apiVersion: v1
+kind: Secret
+type: Opaque
+metadata:
+  name: rabbitmq-url-secret
+stringData:
+  url: 'messaging.hub.esante.gouv.fr'
