--- a/hub/dispatcher/src/main/resources/application.properties
+++ b/hub/dispatcher/src/main/resources/application.properties
@@ -21,3 +21,5 @@ client.preferences.file=file:/config/client.preferences.csv
 # expressed in seconds for readability and use in code,
 # should match the message TTL applied to all client queues (which is in milliseconds)
 hubsante.default.message.ttl=86400
+
+management.endpoints.web.exposure.include=prometheus
