--- a/hub/dispatcher/build.gradle
+++ b/hub/dispatcher/build.gradle
@@ -9,7 +9,7 @@ plugins {
 
 group = 'com.hubsante'
 archivesBaseName = 'hubsante-dispatcher'
-version = '0.11.1'
+version = '0.12-0-SNAPSHOT'
 
 java {
     toolchain {
