feat/ssr: ingress modification

--- a/hub/infra/web/ingress.yaml
+++ b/hub/infra/web/ingress.yaml
@@ -39,6 +39,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: web-lrm
+                name: lrm-client
                 port:
                   number: 80
