feat/lrm: rolling back changes

--- a/hub/infra/web/ingress.yaml
+++ b/hub/infra/web/ingress.yaml
@@ -39,6 +39,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: lrm-client
+                name: web-lrm
                 port:
                   number: 80
