--- a/web/lrm/client/package.json
+++ b/web/lrm/client/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@koumoul/vjsf": "^2.21.4",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/toast": "^3.3.1",
     "core-js": "^3.25.3",
     "jsonpath": "^1.1.1",
     "markdown-it": "^13.0.1",
