--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,9 +41,8 @@ jobs:
             exit 1
           fi
           
-          PATTERN="^([0-9]+\.[0-9]+\.[0-9]+)(-[A-Za-z]+(-[0-9]+))?$"
+          PATTERN="^([0-9]+\.[0-9]+\.[0-9]+)(-[A-Za-z0-9\-]+)?$"
           if [[ ! "$VERSION" =~ $PATTERN ]]; then
-            echo $VERSION
             echo "Invalid version number"
             exit 1
           fi
