--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,6 +72,7 @@ jobs:
           username: ${{ secrets.BB_DOCKER_USERNAME }}
           password: ${{ secrets.BB_DOCKER_PASSWORD }}
           repository: romainfd/hub-lrm-back
+          push: true
           tags: ${{ steps.extract_info.outputs.version }}
           context: ./web/lrm
 
@@ -82,5 +83,6 @@ jobs:
           username: ${{ secrets.BB_DOCKER_USERNAME }}
           password: ${{ secrets.BB_DOCKER_PASSWORD }}
           repository: romainfd/hub-lrm-front
+          push: true
           tags: ${{ steps.extract_info.outputs.version }}
           context: ./web/lrm/client
