--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,16 +3,10 @@ name: build image on release
 on:
   release:
     types: [published]
-  # push:
-  #   branches:
-  #     - git-commit-hash
 
 jobs:
   build-image:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: hub/dispatcher
 
     steps:
       - name: Checkout
@@ -24,12 +18,67 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
 
-      - name: Grant execute permission for Gradlew
-        run: chmod +x gradlew
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-      - name: Build and run tests
+      - name: Grant execute permission for Gradlew
+        run: chmod +x hub/dispatcher/gradlew
+
+      - name: Extract release information
+        id: extract_info
+        run: |
+          RELEASE_NAME=${{ github.event.release.name }}
+          echo $RELEASE_NAME
+          
+          if [[ "$RELEASE_NAME" == dispatcher-* ]]; then
+            PROJECT="dispatcher"
+            VERSION=${RELEASE_NAME#dispatcher-}
+          elif [[ "$RELEASE_NAME" == lrm-* ]]; then
+            PROJECT="lrm"
+            VERSION=${RELEASE_NAME#lrm-}
+          else
+            echo "Invalid release name prefix. Must be 'dispatcher' or 'lrm'."
+            exit 1
+          fi
+          
+          PATTERN="^([0-9]+\.[0-9]+\.[0-9]+)(-[A-Za-z0-9\-]+)?$"
+          if [[ ! "$VERSION" =~ $PATTERN ]]; then
+            echo "Invalid version number"
+            exit 1
+          fi
+          
+          echo "::set-output name=project::$PROJECT"
+          echo "::set-output name=version::$VERSION"
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.BB_DOCKER_USERNAME }}
+          password: ${{ secrets.BB_DOCKER_PASSWORD }}
+
+      - name: Run tests, build and push dispatcher Docker image
+        if: steps.extract_info.outputs.project == 'dispatcher'
+        working-directory: hub/dispatcher
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DOCKERHUB_TOKEN: ${{ secrets.DOCKER_HUB_KEY }}
-          RELEASE_NAME: ${{ github.ref_name }}
-        run: ./gradlew jib --image romainfd/dispatcher-$RELEASE_NAME
+          TAG: ${{ steps.extract_info.outputs.version }}
+        run: |
+          ./gradlew test jib -Pversion=$TAG --image romainfd/dispatcher:$TAG
+
+      - name: Build and push lrm backend Docker image
+        if: steps.extract_info.outputs.project == 'lrm'
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          platforms: linux/amd64
+          tags: romainfd/hub-lrm-back:${{ steps.extract_info.outputs.version }}
+          context: ./web/lrm
+
+      - name: Build and push lrm frontend Docker image
+        if: steps.extract_info.outputs.project == 'lrm'
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          platforms: linux/amd64
+          tags: romainfd/hub-lrm-front:${{ steps.extract_info.outputs.version }}
+          context: ./web/lrm/client
