feat/lrm: progress on nuxt 3 migration

--- a/web/lrm/client/package.json
+++ b/web/lrm/client/package.json
@@ -6,8 +6,8 @@
     "setup": "npm run cp:schemas && npm run cp:examples",
     "cp:schemas": "rm static/schemas/json-schema/* && cp -R ../../../../SAMU-Hub-Modeles/src/main/resources/json-schema/ static/schemas/",
     "cp:examples": "rm static/examples/* && cp -R ../../../../SAMU-Hub-Modeles/src/main/resources/sample/examples/ static/",
-    "dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider nuxt",
-    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider nuxt build",
+    "dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider nuxi dev",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider nuxi build",
     "start": "nuxt start",
     "generate": "cross-env NODE_OPTIONS=--openssl-legacy-provider nuxt generate",
     "lint:js": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
@@ -18,12 +18,14 @@
     "@koumoul/vjsf": "^2.21.4",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/toast": "^3.3.1",
+    "@pinia/nuxt": "^0.5.1",
     "ajv": "^8.16.0",
     "core-js": "^3.25.3",
     "jsonpath": "^1.1.1",
     "markdown-it": "^13.0.1",
     "moment": "^2.29.4",
-    "nuxt": "^2.17.1",
+    "nuxt": "^2.17.3",
+    "pinia": "^2.1.7",
     "uuid": "^9.0.0",
     "vue": "^2.7.10",
     "vue-json-viewer": "^2.2.22",
@@ -35,14 +37,15 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.19.1",
+    "@nuxt/bridge": "^3.3.1",
     "@nuxt/types": "^2.15.8",
-    "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^11.0.0",
     "@nuxtjs/eslint-module": "^3.1.0",
     "@nuxtjs/vuetify": "^1.12.3",
     "cross-env": "^7.0.3",
     "eslint": "^8.24.0",
     "eslint-plugin-nuxt": "^4.0.0",
-    "eslint-plugin-vue": "^9.5.1"
+    "eslint-plugin-vue": "^9.5.1",
+    "nuxi": "^3.12.0"
   }
 }
