--- a/web/lrm/client/package.json
+++ b/web/lrm/client/package.json
@@ -15,31 +15,27 @@
     "lintfix": "npm run lint:js -- --fix"
   },
   "dependencies": {
-    "@koumoul/vjsf": "^2.21.4",
-    "@nuxtjs/axios": "^5.13.6",
-    "@nuxtjs/toast": "^3.3.1",
     "@pinia/nuxt": "^0.5.1",
     "ajv": "^8.16.0",
-    "core-js": "^3.25.3",
+    "core-js": "^3.37.1",
     "jsonpath": "^1.1.1",
-    "markdown-it": "^13.0.1",
-    "moment": "^2.29.4",
-    "nuxt": "^2.17.3",
+    "markdown-it": "^13.0.2",
+    "moment": "^2.30.1",
+    "nuxt": "^3.12.2",
     "pinia": "^2.1.7",
     "uuid": "^9.0.0",
-    "vue": "^2.7.10",
-    "vue-json-viewer": "^2.2.22",
-    "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10",
+    "vue": "^3.4.30",
+    "vue-json-viewer": "^3.0.4",
+    "vue-server-renderer": "^2.7.16",
+    "vue-template-compiler": "^2.7.16",
     "vuedraggable": "^2.24.3",
-    "vuetify": "^2.6.10",
-    "vuex": "^3.6.2"
+    "vuetify": "^3.6.10"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.19.1",
+    "@babel/eslint-parser": "^7.24.7",
     "@nuxt/bridge": "^3.3.1",
-    "@nuxt/types": "^2.15.8",
-    "@nuxtjs/eslint-config-typescript": "^11.0.0",
+    "@nuxt/types": "^2.17.4",
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/eslint-module": "^3.1.0",
     "@nuxtjs/vuetify": "^1.12.3",
     "cross-env": "^7.0.3",
