--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ certs/environments/
 !certs/CA/rootCATrue.crt
 !certs/CA/hub.ext
 !certs/CA/hub.preprod.ext
+!certs/CA/rabbitmq.ext
 !certs/CA/client.ext
 !certs/dispatcher.tmp.p12
 certs/users/
