--- a/hub/dispatcher/src/test/resources/config/rabbitmq.conf
+++ b/hub/dispatcher/src/test/resources/config/rabbitmq.conf
@@ -6,8 +6,8 @@ management.tcp.port                   = 15672
 listeners.tcp.default                 = 5672
 listeners.ssl.default                 = 5671
 
-ssl_options.certfile                  = /etc/rabbitmq-tls/tls.crt
-ssl_options.keyfile                   = /etc/rabbitmq-tls/tls.key
+ssl_options.certfile                  = /etc/rabbitmq-tls/rabbitmq.crt
+ssl_options.keyfile                   = /etc/rabbitmq-tls/rabbitmq.key
 ssl_options.cacertfile                = /etc/rabbitmq-tls/ca.crt
 ssl_options.verify                    = verify_peer
 ssl_options.fail_if_no_peer_cert      = true
