feat/lrm: remove broken imports, plugins and mixins and progress further in the migration process

--- a/web/lrm/client/package.json
+++ b/web/lrm/client/package.json
@@ -6,7 +6,7 @@
     "setup": "npm run cp:schemas && npm run cp:examples",
     "cp:schemas": "rm static/schemas/json-schema/* && cp -R ../../../../SAMU-Hub-Modeles/src/main/resources/json-schema/ static/schemas/",
     "cp:examples": "rm static/examples/* && cp -R ../../../../SAMU-Hub-Modeles/src/main/resources/sample/examples/ static/",
-    "dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider nuxi dev",
+    "dev": "cross-env nuxi dev",
     "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider nuxi build",
     "start": "nuxt start",
     "generate": "cross-env NODE_OPTIONS=--openssl-legacy-provider nuxt generate",
@@ -15,9 +15,11 @@
     "lintfix": "npm run lint:js -- --fix"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "@pinia/nuxt": "^0.5.1",
     "ajv": "^8.16.0",
     "core-js": "^3.37.1",
+    "eslint-plugin-vuetify": "^2.4.0",
     "jsonpath": "^1.1.1",
     "markdown-it": "^13.0.2",
     "moment": "^2.30.1",
@@ -27,9 +29,7 @@
     "vue": "^3.4.30",
     "vue-json-viewer": "^3.0.4",
     "vue-server-renderer": "^2.7.16",
-    "vue-template-compiler": "^2.7.16",
-    "vuedraggable": "^2.24.3",
-    "vuetify": "^3.6.10"
+    "vue-template-compiler": "^2.7.16"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.24.7",
@@ -42,6 +42,8 @@
     "eslint": "^8.24.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-vue": "^9.5.1",
-    "nuxi": "^3.12.0"
+    "nuxi": "^3.12.0",
+    "vite-plugin-vuetify": "^2.0.3",
+    "vuetify": "^3.6.10"
   }
 }
