--- a/web/lrm/client/package.json
+++ b/web/lrm/client/package.json
@@ -18,9 +18,11 @@
   "dependencies": {
     "@babel/types": "^7.24.7",
     "@koumoul/vjsf": "^3.0.0-beta.32",
+    "@koumoul/vjsf-markdown": "^0.2.1",
     "@mdi/font": "^7.4.47",
     "@pinia/nuxt": "^0.5.1",
     "@types/node": "^20.14.9",
+    "ajv-formats": "^2.1.1",
     "core-js": "^3.37.1",
     "eslint-plugin-vuetify": "^2.4.0",
     "jsonpath": "^1.1.1",
