--- a/web/lrm/client/package.json
+++ b/web/lrm/client/package.json
@@ -32,6 +32,7 @@
     "pinia": "^2.1.7",
     "rollup-plugin-polyfill-node": "^0.13.0",
     "uuid": "^9.0.0",
+    "vite-plugin-vuetify": "^2.0.3",
     "vue": "^3.4.30",
     "vue-json-viewer": "^3.0.4",
     "vue-server-renderer": "^2.7.16",
@@ -45,6 +46,7 @@
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-vue": "^9.5.1",
     "nuxi": "^3.12.0",
+    "sass": "^1.77.8",
     "typescript": "^5.5.3",
     "vuetify": "^3.6.10"
   }
