--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,8 +53,15 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.BB_DOCKER_USERNAME }}
-          password: ${{ secrets.BB_DOCKER_PASSWORD }}
+          registry: ghcr.io
+          username: ${{ github_actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+#      - uses: docker/metadata-action@v5.5.1
+#        id: meta
+#        with:
+#          images: ghcr.io/${{ env.IMAGE_NAME }}
+#          tags: type=sha,format=short,prefix=
 
       - name: Run tests, build and push dispatcher Docker image
         if: steps.extract_info.outputs.project == 'dispatcher'
@@ -63,7 +70,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TAG: ${{ steps.extract_info.outputs.version }}
         run: |
-          ./gradlew jib -Pversion=$TAG --image romainfd/dispatcher:$TAG
+          ./gradlew jib -Pversion=$TAG --image ghcr.io/${{ github.repository }}/dispatcher:$TAG
 
       - name: Build and push lrm backend Docker image
         if: steps.extract_info.outputs.project == 'lrm'
@@ -71,7 +78,7 @@ jobs:
         with:
           push: true
           platforms: linux/amd64
-          tags: romainfd/hub-lrm-back:${{ steps.extract_info.outputs.version }}
+          tags: ghcr.io/${{ github.repository }}/hub-lrm-back:${{ steps.extract_info.outputs.version }}
           context: ./web/lrm
 
       - name: Build and push lrm frontend Docker image
@@ -80,5 +87,5 @@ jobs:
         with:
           push: true
           platforms: linux/amd64
-          tags: romainfd/hub-lrm-front:${{ steps.extract_info.outputs.version }}
+          tags: ghcr.io/${{ github.repository }}/hub-lrm-front:${{ steps.extract_info.outputs.version }}
           context: ./web/lrm/client
