--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,8 +53,9 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.BB_DOCKER_USERNAME }}
-          password: ${{ secrets.BB_DOCKER_PASSWORD }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run tests, build and push dispatcher Docker image
         if: steps.extract_info.outputs.project == 'dispatcher'
@@ -63,7 +64,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TAG: ${{ steps.extract_info.outputs.version }}
         run: |
-          ./gradlew jib -Pversion=$TAG --image romainfd/dispatcher:$TAG
+          ./gradlew jib -Pversion=$TAG --image ghcr.io/${{ github.repository_owner }}/dispatcher:$TAG
 
       - name: Build and push lrm backend Docker image
         if: steps.extract_info.outputs.project == 'lrm'
@@ -71,7 +72,7 @@ jobs:
         with:
           push: true
           platforms: linux/amd64
-          tags: romainfd/hub-lrm-back:${{ steps.extract_info.outputs.version }}
+          tags: ghcr.io/${{ github.repository_owner }}/hub-lrm-back:${{ steps.extract_info.outputs.version }}
           context: ./web/lrm
 
       - name: Build and push lrm frontend Docker image
@@ -80,5 +81,5 @@ jobs:
         with:
           push: true
           platforms: linux/amd64
-          tags: romainfd/hub-lrm-front:${{ steps.extract_info.outputs.version }}
+          tags: ghcr.io/${{ github.repository_owner }}/hub-lrm-front:${{ steps.extract_info.outputs.version }}
           context: ./web/lrm/client
