--- a/hub/dispatcher/build.gradle
+++ b/hub/dispatcher/build.gradle
@@ -58,7 +58,7 @@ ext {
 }
 
 dependencies {
-    implementation 'com.hubsante:models-2:0.6.0'
+    implementation 'com.hubsante:models-interface:1.0'
 
     implementation 'org.codehaus.groovy:groovy-json:3.0.9'
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
@@ -74,6 +74,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:3.1.2'
     implementation 'org.springframework.boot:spring-boot-starter-aop:3.1.2'
     implementation 'org.aspectj:aspectjtools:'
+    implementation 'com.google.guava:guava:32.1.3-jre'
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
