add vhost tagging for metrics & logs

--- a/hub/dispatcher/src/main/resources/application.properties
+++ b/hub/dispatcher/src/main/resources/application.properties
@@ -21,5 +21,6 @@ client.preferences.file=file:/config/client.preferences.csv
 # expressed in seconds for readability and use in code,
 # should match the message TTL applied to all client queues (which is in milliseconds)
 hubsante.default.message.ttl=86400
+dispatcher.vhost=${DISPATCHER_VHOST}
 
 management.endpoints.web.exposure.include=prometheus
