--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
           echo "::set-output name=project::$PROJECT"
           echo "::set-output name=version::$VERSION"
 
-      - name: Login to Docker Hub
+      - name: Login to Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
