--- a/web/lrm/client/Dockerfile
+++ b/web/lrm/client/Dockerfile
@@ -22,7 +22,7 @@ FROM --platform=linux/amd64 node:19 AS runner
 WORKDIR /app
 
 ADD package.json .
-ADD nuxt.config.js .
+ADD nuxt.config.ts .
 
 COPY --from=builder /app/.nuxt ./.nuxt
 COPY --from=builder /app/node_modules ./node_modules
