--- a/web/lrm/client/package.json
+++ b/web/lrm/client/package.json
@@ -44,6 +44,8 @@
     "@babel/eslint-parser": "^7.24.7",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "cross-env": "^7.0.3",
+    "cypress": "^13.15.0",
+    "cypress-cdp": "^1.5.3",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-vue": "^9.5.1",
     "nuxi": "^3.12.0",
