--- a/web/lrm/client/tsconfig.json
+++ b/web/lrm/client/tsconfig.json
@@ -16,10 +16,11 @@
     "allowJs": true,
     "paths": {
       "@/*": [
-       "src/*"
+       "*"
       ]
      }
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
-  "exclude": ["node_modules"]
+  "include": ["**/*.ts", "**/*.d.ts", "**/*.tsx", "**/*.vue"],
+  "exclude": ["node_modules","./cypress/support/*"],
+  "extends": "./.nuxt/tsconfig.json"
 }
