--- a/web/lrm/client/tsconfig.json
+++ b/web/lrm/client/tsconfig.json
@@ -13,12 +13,7 @@
     "lib": ["ESNext", "DOM"],
     "skipLibCheck": true,
     "noEmit": true,
-    "allowJs": true,
-    "paths": {
-      "@/*": [
-       "*"
-      ]
-     }
+    "allowJs": true
   },
   "include": ["**/*.ts", "**/*.d.ts", "**/*.tsx", "**/*.vue"],
   "exclude": ["node_modules","./cypress/support/*"],
