rename dispatcher TTL property

--- a/hub/dispatcher/src/main/resources/application.properties
+++ b/hub/dispatcher/src/main/resources/application.properties
@@ -17,10 +17,10 @@ spring.rabbitmq.publisher-returns=true
 spring.rabbitmq.template.mandatory=true
 
 client.preferences.file=file:/config/client.preferences.csv
-# hubsante.default.message.ttl needs to be syncd with definitions.json :
+# dispatcher.default.ttl needs to be syncd with RabbitMQ conf :
 # expressed in seconds for readability and use in code,
 # should match the message TTL applied to all client queues (which is in milliseconds)
-hubsante.default.message.ttl=86400
+dispatcher.default.ttl=86400
 dispatcher.vhost=${DISPATCHER_VHOST}
 
 management.endpoints.web.exposure.include=prometheus
